--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -5,6 +5,7 @@
 @import './pages/home.scss';
 @import './pages/works.scss';
 @import './pages/about.scss';
+@import './common/footer.scss';
 
 :root {
   --easing: cubic-bezier(0.5, 0.7, 0.4, 1);
