--- a/src/css/common/footer.scss
+++ b/src/css/common/footer.scss
@@ -1,6 +1,5 @@
 .footer {
   text-transform: uppercase;
-
   h4 {
     font-weight: 900;
     font-size: 20px;
@@ -8,7 +7,7 @@
       content: '';
       width: 10px;
       height: 4px;
-      background: black;
+      background: $color-white;
       display: inline-block;
       margin: 0 15px 0 30px;
     }
@@ -16,7 +15,10 @@
 
   .footer-list-item {
     font-weight: 600;
-    // padding: 0 20px;
+  }
+
+  .footer-list-link {
+    color: $color-white;
   }
 
   .footer-list-item {
