--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -20,6 +20,12 @@
     visibility: hidden;
   }
 
+  .txt-small {
+    max-width: 60%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
   .profile-image-wrapper {
     position: absolute;
     overflow: hidden;
