--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -28,9 +28,6 @@
 
   .profile-image-wrapper {
     position: absolute;
-    // overflow: hidden;
-    right: 0;
-    top: 0;
     z-index: 10;
     height: 300px;
     width: 300px;
@@ -38,6 +35,8 @@
     pointer-events: none;
   }
   .profile-image {
+    pointer-events: none;
+    opacity: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -48,6 +47,9 @@
     left: 0;
     will-change: opacity, transform, top, left;
     z-index: 5;
+    &:first-child {
+      filter: grayscale(0.3);
+    }
     &:nth-child(2) {
       z-index: 3;
       filter: grayscale(0.4);
