--- a/src/css/pages/about.scss
+++ b/src/css/pages/about.scss
@@ -1,4 +1,21 @@
 .about-wrapper {
+  position: relative;
+  .profile-image-wrapper {
+    position: fixed;
+    right: 0;
+    top: 0;
+    max-width: 40%;
+    height: 100%;
+    opacity: 0.4;
+    overflow: hidden;
+    .profile-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transform: rotateY(180deg);
+    }
+  }
+
   .hero {
     .mask {
       margin-bottom: 20px;
@@ -11,6 +28,10 @@
 
   .title {
     overflow: hidden;
+  }
+
+  .title-animated {
+    padding-left: 0.5vw;
   }
 
   section {
