--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -91,3 +91,14 @@ span[class*="char"] {
   text-shadow: -20px 10px 10px rgb(0 0 0 / 30%), 0 20px 50px rgb(0 0 0 / 30%);
   letter-spacing: -1vw;
 }
+
+.title-wrapper,
+.title-layer,
+.title,
+.title-large,
+.text-animated,
+.profile-image-wrapper,
+.profile-image,
+span {
+  will-change: opacity, transform;
+}
