--- a/src/css/common/typo.scss
+++ b/src/css/common/typo.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,700&display=swap");
-
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
@@ -49,3 +47,16 @@
   line-height: 2vw;
   font-weight: 400;
 }
+
+.counter {
+  font-size: 2vw;
+  font-weight: 400;
+}
+
+.work-item-title {
+  @extend .ff-bebas;
+  font-size: 5vw;
+  line-height: 5vw;
+  font-weight: 700;
+}
+
